Batch Monitoring/src/objects/BulkJobsConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is used to store endpoint URLs</description>
    <fields>
        <fullName>APIVersion__c</fullName>
        <label>APIVersion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthenticationURL__c</fullName>
        <label>AuthenticationURL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Both_SuccessAndFailure_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Both SuccessAndFailure Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BulkAPIJobURL__c</fullName>
        <label>BulkAPIJobURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPointURL__c</fullName>
        <label>EndPointURL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failure Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendToAddress__c</fullName>
        <label>SendToAddress</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success Status</label>
        <type>Checkbox</type>
    </fields>
    <label>BulkJobsConfig</label>
</CustomObject>